// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditorNodePropertiesComponent /> renders component 1`] = `
<table
  className="propertyTable"
>
  <tbody>
    <tr
      key="singlevalueprop"
    >
      <td
        className="labelCol propertyId"
        title="singlevalueprop"
      >
        singlevalueprop
      </td>
      <td
        className="valueCol"
        title="abcd"
      >
        <div
          className="propertyValue"
          key="abcd"
        >
          abcd
        </div>
      </td>
    </tr>
    <tr
      key="multivaluesprop"
    >
      <td
        className="labelCol propertyId"
        title="multivaluesprop"
      >
        multivaluesprop
      </td>
      <td
        className="valueCol"
        title="efgh, 1234, true, false, undefined"
      >
        <div
          className="propertyValue"
          key="efgh"
        >
          efgh
        </div>
        <div
          className="propertyValue"
          key="1234"
        >
          1234
        </div>
        <div
          className="propertyValue"
          key="true"
        >
          true
        </div>
        <div
          className="propertyValue"
          key="false"
        >
          false
        </div>
        <div
          className="propertyValue"
          key="undefined"
        >
          undefined
        </div>
      </td>
    </tr>
    <tr
      key="singlevalueprop2"
    >
      <td
        className="labelCol"
      >
        singlevalueprop2
      </td>
      <td
        className="valueCol"
      >
        <input
          className="edgeInput"
          onChange={[Function]}
          placeholder="Value"
          type="text"
          value="ijkl"
        />
      </td>
      <td>
        <select
          className="typeSelect"
          onChange={[Function]}
          required={true}
          value="string"
        >
          <option
            key="string"
            value="string"
          >
            string
          </option>
          <option
            key="number"
            value="number"
          >
            number
          </option>
          <option
            key="boolean"
            value="boolean"
          >
            boolean
          </option>
        </select>
      </td>
      <td
        className="actionCol"
      >
        <AccessibleElement
          aria-label="Delete property"
          as="span"
          className="rightPaneTrashIcon rightPaneBtns"
          onActivated={[Function]}
        >
          <img
            alt="Delete"
            src={Object {}}
          />
        </AccessibleElement>
      </td>
    </tr>
    <tr
      key="multivaluesprop2"
    >
      <td
        className="labelCol propertyId"
      >
        multivaluesprop2
      </td>
      <td>
        <div
          className="propertyValue"
          key="mnop"
        >
          mnop
        </div>
        <div
          className="propertyValue"
          key="5678"
        >
          5678
        </div>
        <div
          className="propertyValue"
          key="true"
        >
          true
        </div>
        <div
          className="propertyValue"
          key="false"
        >
          false
        </div>
        <div
          className="propertyValue"
          key="undefined"
        >
          undefined
        </div>
      </td>
      <td />
      <td
        className="actionCol"
      >
        <AccessibleElement
          aria-label="Remove existing property"
          as="span"
          className="rightPaneTrashIcon rightPaneBtns"
          onActivated={[Function]}
        >
          <img
            alt="Delete"
            src={Object {}}
          />
        </AccessibleElement>
      </td>
    </tr>
    <tr>
      <td
        className="rightPaneAddPropertyBtnPadding"
        colSpan={3}
      >
        <AccessibleElement
          aria-label="Add a property"
          as="span"
          className="rightPaneAddPropertyBtn rightPaneBtns"
          onActivated={[Function]}
        >
          <img
            alt="Add"
            src={Object {}}
          />
           Add Property
        </AccessibleElement>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<EditorNodePropertiesComponent /> renders proper unicode 1`] = `
<table
  className="propertyTable"
>
  <tbody>
    <tr
      key="unicode1"
    >
      <td
        className="labelCol propertyId"
        title="unicode1"
      >
        unicode1
      </td>
      <td
        className="valueCol"
        title="Véronique"
      >
        <div
          className="propertyValue"
          key="Véronique"
        >
          Véronique
        </div>
      </td>
    </tr>
    <tr
      key="unicode2"
    >
      <td
        className="labelCol propertyId"
        title="unicode2"
      >
        unicode2
      </td>
      <td
        className="valueCol"
        title="亜妃子"
      >
        <div
          className="propertyValue"
          key="亜妃子"
        >
          亜妃子
        </div>
      </td>
    </tr>
    <tr
      key="unicode1"
    >
      <td
        className="labelCol"
      >
        unicode1
      </td>
      <td
        className="valueCol"
      >
        <input
          className="edgeInput"
          onChange={[Function]}
          placeholder="Value"
          type="text"
          value="André"
        />
      </td>
      <td>
        <select
          className="typeSelect"
          onChange={[Function]}
          required={true}
          value="string"
        >
          <option
            key="string"
            value="string"
          >
            string
          </option>
          <option
            key="number"
            value="number"
          >
            number
          </option>
          <option
            key="boolean"
            value="boolean"
          >
            boolean
          </option>
        </select>
      </td>
      <td
        className="actionCol"
      >
        <AccessibleElement
          aria-label="Delete property"
          as="span"
          className="rightPaneTrashIcon rightPaneBtns"
          onActivated={[Function]}
        >
          <img
            alt="Delete"
            src={Object {}}
          />
        </AccessibleElement>
      </td>
    </tr>
    <tr
      key="unicode2"
    >
      <td
        className="labelCol"
      >
        unicode2
      </td>
      <td
        className="valueCol"
      >
        <input
          className="edgeInput"
          onChange={[Function]}
          placeholder="Value"
          type="text"
          value="あきら, アキラ,安喜良"
        />
      </td>
      <td>
        <select
          className="typeSelect"
          onChange={[Function]}
          required={true}
          value="string"
        >
          <option
            key="string"
            value="string"
          >
            string
          </option>
          <option
            key="number"
            value="number"
          >
            number
          </option>
          <option
            key="boolean"
            value="boolean"
          >
            boolean
          </option>
        </select>
      </td>
      <td
        className="actionCol"
      >
        <AccessibleElement
          aria-label="Delete property"
          as="span"
          className="rightPaneTrashIcon rightPaneBtns"
          onActivated={[Function]}
        >
          <img
            alt="Delete"
            src={Object {}}
          />
        </AccessibleElement>
      </td>
    </tr>
    <tr>
      <td
        className="rightPaneAddPropertyBtnPadding"
        colSpan={3}
      >
        <AccessibleElement
          aria-label="Add a property"
          as="span"
          className="rightPaneAddPropertyBtn rightPaneBtns"
          onActivated={[Function]}
        >
          <img
            alt="Add"
            src={Object {}}
          />
           Add Property
        </AccessibleElement>
      </td>
    </tr>
  </tbody>
</table>
`;
